# pyrjmcmc

./: CMakeLists.txt  README.md  notes.txt  pyproject.toml
.github/workflows/: build_and_deploy.yaml  test.yaml
examples/: S6.1 - TransD sampling polynomial regression-solution.ipynb  S6.1 - TransD sampling polynomial regression.ipynb  S6.2 - TransD sampling partition modelling-solution.ipynb  S6.2 - TransD sampling partition modelling.ipynb
examples/.ipynb_checkpoints/: S6.1 - TransD sampling polynomial regression-checkpoint.ipynb  S6.1 - TransD sampling polynomial regression-solution-checkpoint.ipynb  S6.2 - TransD sampling partition modelling-checkpoint.ipynb  S6.2 - TransD sampling partition modelling-solution-checkpoint.ipynb
rjmcmc/: CMakeLists.txt  Makefile  libtool
rjmcmc/examples/1d/partitioned/fm/functionfit/: Makefile
rjmcmc/examples/1d/partitioned/fm/gaussian/: Makefile
rjmcmc/examples/1d/partitioned/fm/natural/: Makefile
rjmcmc/examples/1d/partitioned/fm/regression/: Makefile
rjmcmc/examples/1d/partitioned/fm/velocityf/: Makefile
rjmcmc/examples/1d/partitioned/regression/sawtooth/: Makefile
rjmcmc/examples/1d/single/fm/spherefit/: Makefile
rjmcmc/examples/1d/single/regression/cubic/: Makefile
rjmcmc/examples/2d/partitioned/regression/callbackex/: Makefile
rjmcmc/examples/2d/partitioned/regression/square/: Makefile
rjmcmc/include/: Makefile
rjmcmc/python/: __init__.py
rjmcmc/src/: Makefile
rjmcmc/src/.deps/: librjmcmc_la-curvefit.Plo  librjmcmc_la-dataset1d.Plo  librjmcmc_la-forwardmodel_f.Plo  librjmcmc_la-forwardmodel_part1d_hierarchical.Plo  librjmcmc_la-forwardmodel_part2d_hierarchical.Plo  librjmcmc_la-part1d_forwardmodel.Plo  librjmcmc_la-part1d_natural_rj.Plo  librjmcmc_la-part1d_zero.Plo  librjmcmc_la-part2d_regression_rj.Plo  librjmcmc_la-position_map2d.Tpo
rjmcmc/tests/regression/1d/partitioned/fm/MPI_part1d_forwardmodel_natural_c/: Makefile
rjmcmc/tests/regression/1d/partitioned/fm/MPI_part1d_forwardmodel_natural_hierarchical_c/: Makefile
rjmcmc/tests/regression/1d/partitioned/fm/part1d_forwardmodel_natural_c/: Makefile
rjmcmc/tests/regression/1d/partitioned/fm/part1d_forwardmodel_natural_hierarchical_c/: Makefile
rjmcmc/tests/regression/1d/partitioned/fm/part1d_forwardmodel_zero_cubic_c/: Makefile
rjmcmc/tests/regression/1d/single/fm/MPI_single_forwardmodel_c/: Makefile
rjmcmc/tests/regression/1d/single/fm/MPI_single_forwardmodel_hierarchical_c/: Makefile
rjmcmc/tests/regression/2d/partitioned/fm/MPI_part2d_forwardmodel_c/: Makefile
rjmcmc/tests/regression/2d/partitioned/fm/part2d_forwardmodel_c/: Makefile
src/pyrjmcmc/: __init__.py  rjmcmc.py
src/rjmcmc/: CMakeLists.txt  config.status  configure  rjmcmc.pc
src/rjmcmc/examples/1d/partitioned/fm/functionfitf/: Makefile
src/rjmcmc/examples/1d/partitioned/fm/step/: Makefile
src/rjmcmc/examples/1d/partitioned/fm/synthdata/: Makefile
src/rjmcmc/examples/1d/partitioned/regression/multiquad/: Makefile
src/rjmcmc/examples/1d/partitioned/regression/multistep/: Makefile
src/rjmcmc/examples/1d/partitioned/regression/zeromultistep/: Makefile
src/rjmcmc/examples/1d/single/fm/gaussian/: Makefile
src/rjmcmc/examples/1d/single/fm/simplef/: Makefile
src/rjmcmc/examples/1d/single/fm/simpleimage/: Makefile
src/rjmcmc/examples/2d/partitioned/fm/gaussian/: Makefile
src/rjmcmc/examples/2d/partitioned/fm/mpi_regression/: Makefile
src/rjmcmc/examples/2d/partitioned/fm/regression/: Makefile
src/rjmcmc/examples/2d/partitioned/regression/ausmoho/: Makefile
src/rjmcmc/examples/2d/partitioned/regression/disc/: Makefile
src/rjmcmc/examples/2d/partitioned/regression/gaussian/: Makefile
src/rjmcmc/python/swig/: rjmcmc_wrap.c
src/rjmcmc/src/.deps/: librjmcmc_la-bbox2d.Plo  librjmcmc_la-dataset2d.Plo  librjmcmc_la-delaunay2d.Plo  librjmcmc_la-engine.Plo  librjmcmc_la-forwardmodel_part1d.Plo  librjmcmc_la-forwardmodel_part2d.Plo  librjmcmc_la-forwardmodel_single.Plo  librjmcmc_la-forwardmodel_util.Plo  librjmcmc_la-forwardmodelparameter.Plo  librjmcmc_la-part1d_regression_rj.Plo  librjmcmc_la-part2d_forwardmodel.Plo  librjmcmc_la-position_map1d.Plo
src/rjmcmc/tests/: Makefile
src/rjmcmc/tests/regression/1d/partitioned/fm/MPI_part1d_forwardmodel_c/: Makefile
src/rjmcmc/tests/regression/1d/partitioned/fm/MPI_part1d_forwardmodel_hierarchical_c/: Makefile
src/rjmcmc/tests/regression/1d/partitioned/fm/part1d_forwardmodel_c/: Makefile
src/rjmcmc/tests/regression/1d/partitioned/fm/part1d_forwardmodel_hierarchical_c/: Makefile
src/rjmcmc/tests/regression/1d/single/fm/single_forwardmodel_c/: Makefile
src/rjmcmc/tests/regression/1d/single/fm/single_forwardmodel_hierarchical_c/: Makefile
src/rjmcmc/tests/regression/2d/partitioned/fm/MPI_part2d_forwardmodel_hierarchical_c/: Makefile
src/rjmcmc/tests/regression/2d/partitioned/fm/part2d_forwardmodel_hierarchical_c/: Makefile
test/: test_single.py
