# pyproject.toml

[build-system]
# scikit-build-core will inject cmake and ninja, so you don't strictly need them here,
# but keeping them doesn't hurt and explicitly states requirements.
# The warning from scikit-build-core is harmless if they are present.
# Also, remove the '[rich,pyproject]' extra if you don't specifically need it for build-system itself.
# Often just "scikit-build-core>=0.11.0" is sufficient.
requires = ["scikit-build-core>=0.11.0", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrjmcmc"
version = "0.0.1"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]


# --- Linux-specific configuration for cibuildwheel ---
[tool.cibuildwheel.linux]
before-build = "yum update -y && yum install -y python3-devel swig"

cmake.define = {
    PYTHON_EXECUTABLE = "$ENV{PYTHON_DOT_VERSION_EXE}",
    PYTHON_INCLUDE_DIR = "$ENV{PYTHON_INCLUDE_DIR}",
    PYTHON_LIBRARY = "$ENV{PYTHON_LIB}",
    Python3_EXECUTABLE = "$ENV{PYTHON_DOT_VERSION_EXE}",
    Python3_INCLUDE_DIR = "$ENV{PYTHON_INCLUDE_DIR}",
    Python3_LIBRARY = "$ENV{PYTHON_LIB}" # <--- NO COMMA HERE
}
