# pyproject.toml

[build-system]
requires = ["scikit-build-core>=0.11.0", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrjmcmc"
version = "0.0.1"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.cibuildwheel.linux]
before-build = "yum update -y && yum install -y python3-devel swig"
